** This commit is considered is unstable for the community users. Please not use it in your production or customize it for your usage. Keep using the release sources if you want not receive some abnormal issue or lack of document
* Use Spring boot to run the standalone application
* Upgrade libraries
* Replace Scala codes by Kotlin
* Many minor improvements and bug fixes
* Performance improvement