@@ -6,10 +6,19 @@ rem Start/Stop Script for the MyCollab Server
 rem
 rem Environment Variable Prerequisites
 rem
-rem   MYCOLLAB_HOME   May point at your MyCollab "build" directory.
+rem   MYCOLLAB_OPTS   (Optional) Java runtime options used when the "start",
+rem                    "stop" command is executed.
+rem                   Include here and not in JAVA_OPTS all options, that should
+rem                   only be used by MyCollab itself, not by the stop process,
+rem                   the version command etc.
+rem                   Examples are heap size, GC logging, JMX ports etc.
+rem
+rem   JAVA_HOME       Must point at your Java Development Kit installation.
+rem                   Required to run the with the "debug" argument.
 rem ---------------------------------------------------------------------------
 
 set _RUNJAVA=java
+set MYCOLLAB_OPTS=-noverify -server -Xms394m -Xmx768m -XX:NewSize=128m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
 
 rem Suppress Terminate batch job on CTRL+C
 if not ""%1"" == ""run"" goto mainEntry
@@ -23,7 +32,6 @@ rem Use provided errorlevel
 set RETVAL=%ERRORLEVEL%
 del /Q "%TEMP%\%~nx0.Y" >NUL 2>&1
 exit /B %RETVAL%
-
 :mainEntry
 del /Q "%TEMP%\%~nx0.run" >NUL 2>&1
 
@@ -39,10 +47,12 @@ if exist "%MYCOLLAB_HOME%\bin\mycollab.bat" goto okHome
 echo The MYCOLLAB_HOME environment variable is not defined correctly
 echo This environment variable is needed to run this program
 goto end
-
 :okHome
+
 rem ----- Execute The Requested Command ---------------------------------------
+
 echo Using MYCOLLAB_HOME:   "%MYCOLLAB_HOME%"
+
 set _EXECJAVA=%_RUNJAVA%
 
 
@@ -59,7 +69,7 @@ goto end
 shift
 if not "%OS%" == "Windows_NT" goto noTitle
 if "%TITLE%" == "" set TITLE=MyCollab
-set _EXECJAVA=start "%TITLE%" %_RUNJAVA%
+set _EXECJAVA=start "%TITLE%" %_RUNJAVA% %MYCOLLAB_OPTS%
 goto gotTitle
 :noTitle
 set _EXECJAVA=start %_RUNJAVA%
@@ -72,9 +82,10 @@ shift
 goto execCmd
 
 :execCmd
+
 rem Execute Java with the applicable properties
 cd ..
-%_EXECJAVA% -jar executor.jar %*
+%_EXECJAVA% -jar executor.jar %* %MYCOLLAB_OPTS%
 goto end
 
 :end
