@@ -4,12 +4,6 @@
 # Control Script for the MyCollab Server
 #
 # Environment Variable Prerequisites
-#
-#   MYCOLLAB_HOME   May point at your MyCollab "build" directory.
-#   MYCOLLAB_OUT    (Optional) Full path to a file where stdout and stderr
-#                   will be redirected.
-#                   Default is $CATALINA_BASE/logs/catalina.out
-#   MYCOLLAB_PORT   Port of server to allow user access to server
 #   MYCOLLAB_OPTS   (Optional) Java runtime options used when the "start",
 #                   "stop" command is executed.
 #                   Include here and not in JAVA_OPTS all options, that should
@@ -25,6 +19,9 @@
 #                   used
 # -----------------------------------------------------------------------------
 # OS specific support.  $var _must_ be set to either true or false.
+
+export MYCOLLAB_OPTS=-noverify -server -Xms394m -Xmx768m -XX:NewSize=128m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
+
 cygwin=false
 darwin=false
 os400=false
@@ -156,7 +153,7 @@ if [ "$1" = "--start" ] ; then
   shift
   touch "$MYCOLLAB_OUT"
   cd ..
-  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar &
+  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar $MYCOLLAB_OPTS &
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     echo $! > "$MYCOLLAB_PID"
@@ -199,7 +196,7 @@ elif [ "$1" = "--stop" ] ; then
   fi
 
   cd ..
-  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar --stop
+  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/executor.jar --stop $MYCOLLAB_OPTS
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     if [ -f "$MYCOLLAB_PID" ]; then
